--- a/src/components/GenerateButton/styles.module.scss
+++ b/src/components/GenerateButton/styles.module.scss
@@ -4,11 +4,11 @@
     border-radius: 50px;
     color: #fff;
     cursor: pointer;
-    font-size: 1.05rem;
+    font-size: 0.95rem;
     font-weight: 200;
     letter-spacing: 0.5px;
     outline: none;
-    padding: 14px 18px;
+    padding: 10px 14px;
     text-transform: uppercase;
     transition: box-shadow 0.15s, background-color 0.15s;
 
@@ -24,5 +24,15 @@
         box-shadow: none !important;
         color: #777;
         cursor: not-allowed;
+    }
+
+    @media (min-width: 992px) {
+        font-size: 1rem;
+        padding: 12px 16px;
+    }
+
+    @media (min-width: 1500px) {
+        font-size: 1.05rem;
+        padding: 14px 18px;
     }
 }
