--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ code {
 
 #root {
     align-items: center;
-    background-image: linear-gradient(76.3deg, rgba(44, 62, 78, 1) 12.6%, rgba(69, 103, 131, 1) 82.8%);
+    background-color: #292f52;
     display: flex;
     height: 100vh;
     justify-content: center;
