--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,16 @@
 .App {
     text-align: center;
+
+    @media (min-width: 768px) {
+        width: 80%;
+    }
+
+    @media (min-width: 1024px) {
+        width: 75%;
+    }
+
+    @media (min-width: 1500px) {
+        width: 50%;
+        max-width: 1600px;
+    }
 }
