--- a/src/components/OutputBox/styles.module.scss
+++ b/src/components/OutputBox/styles.module.scss
@@ -4,30 +4,17 @@
     color: #fff;
     display: flex;
     flex-direction: column;
+    font-weight: 200;
     gap: 0.75rem;
     margin: 0 auto;
-    max-height: 300px;
+    height: 300px;
     overflow-y: auto;
     padding: 1rem;
     position: relative;
     text-align: left;
-    min-width: 90%;
 
     &:hover .copyBtn {
         opacity: 1;
-    }
-
-    @media (min-width: 768px) {
-        min-width: 80%;
-    }
-
-    @media (min-width: 1024px) {
-        min-width: 75%;
-    }
-
-    @media (min-width: 1500px) {
-        min-width: 50%;
-        max-width: 1600px;
     }
 }
 
