--- a/src/components/Generator/styles.module.scss
+++ b/src/components/Generator/styles.module.scss
@@ -1,1 +1,15 @@
+.optionsWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2.5rem;
 
+    @media (min-width: 992px) {
+        flex-direction: row;
+        gap: 1rem;
+    }
+
+    @media (min-width: 1200px) {
+        gap: 2rem;
+    }
+}
