--- a/src/components/Generator/styles.module.scss
+++ b/src/components/Generator/styles.module.scss
@@ -1,3 +1,19 @@
+.generator {
+    position: relative;
+}
+
+.outputboxWrapper {
+    position: relative;
+
+    .imageWrapper {
+        opacity: 0.75;
+        position: absolute;
+        right: 0;
+        top: 0;
+        transform: translate(50%, -25%);
+    }
+}
+
 .optionsWrapper {
     display: flex;
     flex-direction: column;
