--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,21 +1,26 @@
 .generateBtn {
     background-color: transparent;
-    border: 1px solid #fff;
-    border-radius: 50px;
+    border: 1px solid #ffffff77;
+    border-radius: 4px;
     color: #fff;
     cursor: pointer;
-    font-size: 0.95rem;
+    font-size: 0.75rem;
     font-weight: 200;
     letter-spacing: 0.5px;
     outline: none;
-    padding: 10px 14px;
+    padding: 6px 10px;
     text-transform: uppercase;
-    transition: box-shadow 0.15s, background-color 0.15s;
+    transition: box-shadow 0.15s, background-color 0.15s, border 0.15s;
 
     &:hover {
-        background-color: #ffffff0f;
+        background-color: #ffffff07;
+        border-color: #fff;
         box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.1);
         outline: none;
+    }
+
+    &:focus {
+        border-color: #fff;
     }
 
     &:disabled {
@@ -27,12 +32,12 @@
     }
 
     @media (min-width: 992px) {
-        font-size: 1rem;
-        padding: 12px 16px;
+        font-size: 0.85rem;
+        padding: 8px 12px;
     }
 
     @media (min-width: 1500px) {
-        font-size: 1.05rem;
-        padding: 14px 18px;
+        font-size: 0.95rem;
+        padding: 10px 14px;
     }
 }
