--- a/src/App.scss
+++ b/src/App.scss
@@ -14,3 +14,13 @@
         max-width: 1600px;
     }
 }
+
+.description {
+    font-size: 0.95rem;
+    letter-spacing: -0.2px;
+    line-height: 1.4rem;
+}
+
+.pitch {
+    font-weight: 600;
+}
