--- a/src/components/Description/styles.module.scss
+++ b/src/components/Description/styles.module.scss
@@ -1,6 +1,10 @@
 .description {
     font-size: 0.9rem;
     font-weight: 200;
+    letter-spacing: -0.2px;
+    line-height: 1.4rem;
+    word-wrap: normal;
+    word-break: normal;
 
     @media (min-width: 768px) {
         font-size: 1rem;
