--- a/src/components/Generator/styles.module.scss
+++ b/src/components/Generator/styles.module.scss
@@ -60,3 +60,11 @@
     margin-top: 16px;
     text-align: left;
 }
+
+.loaderWrapper {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%);
+    z-index: 99;
+}
