Add SASS variables and use them to replace hardcoded values in scss files

--- a/src/components/AppError/styles.module.scss
+++ b/src/components/AppError/styles.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .appError {
     margin: 2rem;
 }
@@ -24,7 +26,7 @@
 }
 
 .errorLabel {
-    color: #b8c0e7;
+    color: $secondary;
     font-size: 1.1rem;
     margin-top: 1rem;
     opacity: 0.5;
