--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,8 +1,11 @@
+@import '../../variables.scss';
+
 .generateBtn {
     background-color: transparent;
-    border: 1px solid #ffffff77;
+    border: $border;
     border-radius: 4px;
-    color: #fff;
+    box-shadow: none;
+    color: $accent;
     cursor: pointer;
     font-size: 0.95rem;
     font-weight: 200;
@@ -13,21 +16,22 @@
     transition: box-shadow 0.15s, background-color 0.15s, border 0.15s;
 
     &:hover {
-        background-color: #ffffff07;
-        border-color: #fff;
-        box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.1);
+        background-color: rgba($color: $white, $alpha: 0.05);
+        border-color: $accent;
+        box-shadow: 0px 6px 10px rgba($color: $black, $alpha: 0.2);
         outline: none;
     }
 
     &:focus {
-        border-color: #fff;
+        border-color: $accent;
+        box-shadow: 0px 6px 10px rgba($color: $black, $alpha: 0.2);
     }
 
     &:disabled {
         background-color: transparent !important;
-        border-color: #777;
+        border-color: $grey;
         box-shadow: none !important;
-        color: #777;
+        color: $grey;
         cursor: not-allowed;
     }
 
