--- a/src/components/CountInput/styles.module.scss
+++ b/src/components/CountInput/styles.module.scss
@@ -1,9 +1,11 @@
+@import '../../variables.scss';
+
 .inputContainer {
     text-align: left;
 }
 
 .inputLabel {
-    color: #fff;
+    color: $accent;
     font-size: 0.75rem;
     font-weight: 600;
     letter-spacing: -0.25px;
@@ -21,18 +23,19 @@
 
 .input {
     background-color: transparent;
-    border: 1px solid #ffffff3f;
+    border: $border;
     border-radius: 4px;
-    color: #fff;
+    color: $accent;
     font-size: 0.85rem;
     font-weight: 600;
     outline: none;
     padding: 7px 8px;
     transition: border 0.15s;
 
-    &:hover, &:active {
+    &:hover,
+    &:active {
         outline: none;
-        border-color: #fff;
+        border-color: $accent;
     }
 
     @media (min-width: 992px) {
