--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,8 +1,10 @@
+@import '../../variables.scss';
+
 .header {
     font-size: 2rem;
     font-weight: 800;
     letter-spacing: -0.25px;
-    text-shadow: 1px 2px 5px rgba($color: #000000, $alpha: 0.2);
+    text-shadow: 1px 2px 5px rgba($color: $black, $alpha: 0.2);
 
     @media (min-width: 768px) {
         font-size: 3rem;
