--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;700&display=swap');
+@import './variables.scss';
 
 *, *:after, *:before {
     box-sizing: border-box;
@@ -17,7 +18,7 @@ code {
 
 #root {
     align-items: center;
-    background-color: #292f52;
+    background-color: $primary;
     display: flex;
     height: 100vh;
     justify-content: center;
