Update icons and app animations

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,5 +22,7 @@ code {
     display: flex;
     height: 100vh;
     justify-content: center;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 1rem;
 }
