--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,14 @@
 .App {
     text-align: center;
+    padding-top: 2rem;
 
     @media (min-width: 768px) {
+        padding-top: 10rem;
         width: 80%;
     }
 
     @media (min-width: 1024px) {
+        padding-top: 12rem;
         width: 75%;
     }
 
@@ -13,8 +16,4 @@
         width: 50%;
         max-width: 1600px;
     }
-}
-
-.pitch {
-    font-weight: 600;
 }
