--- a/src/components/OutputBox/styles.module.scss
+++ b/src/components/OutputBox/styles.module.scss
@@ -7,6 +7,7 @@
     color: $accent;
     display: flex;
     flex-direction: column;
+    font-size: 0.9rem;
     font-weight: 200;
     gap: 0.75rem;
     margin: 0 auto;
@@ -15,6 +16,10 @@
     position: relative;
     text-align: left;
     z-index: 1;
+
+    @media (min-width: 992px) {
+        font-size: 1rem;
+    }
 }
 
 .outputContent {
