--- a/src/components/OutputBox/styles.module.scss
+++ b/src/components/OutputBox/styles.module.scss
@@ -17,6 +17,13 @@
     text-align: left;
     z-index: 1;
 
+    .loaderWrapper {
+        left: 50%;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
     @media (min-width: 992px) {
         font-size: 1rem;
     }
