--- a/src/components/OutputBox/styles.module.scss
+++ b/src/components/OutputBox/styles.module.scss
@@ -22,6 +22,7 @@
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%);
+        z-index: 10;
     }
 
     @media (min-width: 992px) {
