--- a/src/components/OutputBox/styles.module.scss
+++ b/src/components/OutputBox/styles.module.scss
@@ -18,10 +18,10 @@
     z-index: 1;
 
     .loaderWrapper {
-        left: 50%;
+        bottom: 0%;
         position: absolute;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        right: 0%;
+        transform: translate(-100%, -100%);
         z-index: 10;
     }
 
