--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,31 @@
 .App {
     text-align: center;
-    padding-top: 2rem;
+    padding-top: 1rem;
+
+    .logoWrapper {
+        height: 2.5rem;
+        margin: 0 auto;
+        width: 2.5rem;
+    }
 
     @media (min-width: 768px) {
-        padding-top: 10rem;
+        padding-top: 8rem;
         width: 80%;
+
+        .logoWrapper {
+            height: 3rem;
+            width: 3rem;
+        }
     }
 
     @media (min-width: 1024px) {
-        padding-top: 12rem;
+        padding-top: 9rem;
         width: 75%;
+
+        .logoWrapper {
+            height: 4rem;
+            width: 4rem;
+        }
     }
 
     @media (min-width: 1500px) {
