--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -4,6 +4,7 @@
     font-size: 2rem;
     font-weight: 800;
     letter-spacing: -0.25px;
+    margin-top: 1rem;
     text-shadow: 1px 2px 5px rgba($color: $black, $alpha: 0.2);
 
     @media (min-width: 768px) {
